--- a/index.html
+++ b/index.html
@@ -144,23 +144,23 @@
           </div><br><br><br><br>
           <div class="col-md-4">
             <img src="IMG/1.png" class="img-responsive  img-thumbnail" alt="">
-            <h3 class="h5 small_heading" >Xypo</h3>
-            <p>A responsive, mobile friendly website, made by using HTML, CSS and JS from <strong>scratch</strong></p>
+            <h3 class="h5 small_heading" >CROWN-Clothing</h3>
+            <p>Built a reponsive & massive E-commerce app with ReactJS- Redux, Hooks, GraphQL, ContextAPI, Stripe, Firebase. A fully functional application with payment getaways & auth from <strong>scratch</strong></p>
           </div><br><br><br><br>
           <div class="col-md-4">
             <img src="IMG/2.png" class="img-responsive  img-thumbnail" alt="">
             <h3 class="h5 small_heading">Patrix Brochure Website</h3>
-            <p>A responsive, mobile friendly website, made by using HTML, CSS , SASS, boostrap and JS  </p>
+            <p>Designed on Figma and Developed using SASS, a brochure website.</p>
           </div><br><br><br><br>
           <div class="col-md-4">
             <img src="IMG/3.png" class="img-responsive  img-thumbnail" alt="">
-            <h3 class="h5 small_heading">Simon Game</h3>
-            <p>A working creative JS game, made from scratch</p><br><br><br><br>
+            <h3 class="h5 small_heading">Blog Pre-Post</h3>
+            <p>A blog pre-post application MongoDB CRUD operations, generates valid URLs for the dynamically created blogs along with method-overrides for SEO using NodeJS server</p><br><br><br><br>
           </div>
           <div class="col-md-4">
             <img src="IMG/4.png" class="img-responsive  img-thumbnail" alt="">
             <h3 class="h5 small_heading">Mini JS projects</h3>
-            <p>Worked on Calculators, To-Do Lists, Note-taking Applications and so much more! </p>
+            <p>Worked on Calculators, To-Do Lists, A working creative JS game, Note-taking Applications and so much more! </p>
           </div>
         </div>
       </div>
@@ -201,7 +201,7 @@
             </div>
 
             <div class="box">
-              <div class="icon"><a href="https://www.linkedin.com/"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></div>
+              <div class="icon"><a href="https://www.linkedin.com/in/rida-mumtaz-0603/"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></div>
               <div class="text">
                 <h3>LinkedIn</h3>
                 <p>Rida Mumtaz</p>
@@ -226,10 +226,10 @@
           <textarea placeholder="Your Message"></textarea>
           <input type="submit" value="Send" name="">
         </form>
-        
+
       </div>
     </div>
-    
+
   </section>
   <p style="text-align: center;">© 2021 Rida Mumtaz</p>
   <script type="text/javascript">
